# blockbite-smart-contract

./: .env.local.example  .gitignore  .vercelignore  404.html  AGENTS.md  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_GUIDE.md  DEPLOY_EMERGENCY.sh  DEPLOY_RUNBOOK_FOR_JUDGE.md  FINAL_SUBMISSION.md  INTEGRATION_TEST_GAP.md  JUDGE_EVIDENCE.md  JUDGE_FINAL_EVIDENCE.md  LICENSE  MEGA_TODO.md  Makefile  PERMANENT_PROOF.md  PROOF_ALL_LAYERS.md  README.md  SECURITY.md  SECURITY_CHECKLIST.md  STATUS_REPORT.md  STATUS_REPORT_WEEK8.md  STATUS_REPORT_WEEK9.md  SUMMARY.md  TDP_FIRST_ARCHITECTURE.md  Trident.toml  WEEK5_PR_DESCRIPTION.md  WEEK5_REPORT.md  ares-policy.toml  ares.toml  hashmap.json  index.html  next.config.mjs  next.config.ts  package-lock.json  (+5 more)
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.superstack/: build-context.md
adr/: index.html
app/: globals.css  layout.tsx  opengraph-image.tsx  page.module.css  page.tsx  twitter-image.tsx
assets/: adr_index.md.DA5ln-xA.js  adr_index.md.DA5ln-xA.lean.js  app.BH1VnCF8.js  guide_getting-started.md.iTzwQQet.js  guide_integration.md.yZqg3N7W.js  guide_integration.md.yZqg3N7W.lean.js  guide_quickstart.md.DoVp2rhW.js  guide_quickstart.md.DoVp2rhW.lean.js  index.md.BpkaioJj.js  index.md.BpkaioJj.lean.js  reference_accounts.md.W3VR19d-.js  reference_errors.md.DMuGNkmY.lean.js  reference_instructions.md.QlKaZ6eb.js  reference_instructions.md.QlKaZ6eb.lean.js  reference_pda.md.DldRizGt.js  reference_pda.md.DldRizGt.lean.js
blockbite/: Anchor.toml  Cargo.toml  SECURITY_CHECKLIST.md  STATUS_REPORT.md  W7_REPORT_BRYAN.md  package.json
blockbite/coverage-tests/: Cargo.toml
blockbite/coverage-tests/tests/: stream_lifecycle.rs
components/: AppWalletProvider.tsx  Countdown.tsx  CssAvatars.tsx  CustomWalletButton.tsx  GameBackground.tsx  HowToPlayPage.tsx  Mascot.tsx  Navbar.module.css  Navbar.tsx  PrizePoolCounter.tsx  TokenSelector.tsx  WalletTracker.tsx  WinnersTicker.tsx
docs/: ADR.md  ARCHITECTURE_DECISIONS.md  AUDIT_TDP_ARCHITECTURE.md  CHANGELOG.md  CLIFF_VESTING.md  COVERAGE_REPORT.md  ERROR_MAP.md  FINAL_SUBMISSION.md  INSTRUCTION_REFERENCE.md  INTEGRATION.md  INTEGRATION_GUIDE.md  PITCH.md  PROGRAM.md  README.md  SECURITY_CHECKLIST.md  SETUP.md  STATUS_REPORT.md  STATUS_REPORT_WEEK8.md  STREAM_MODEL.md  TESTING.md  WEEK7_REPORT.md  _coverpage.md  _sidebar.md  index.html
docs-site/: index.md  package.json
frontend/: next.config.mjs  package-lock.json  package.json
gitbook/: README.md  SUMMARY.md
guide/: quickstart.html  (+2 more)
programs/blockbite-vesting/: Cargo.toml  README.md
programs/blockbite-vesting/src/: lib.rs
(+399 files in other folders)
