[package]
name = "blockbite-vesting"
version = "0.1.0"
description = "Week 3 Anchor skeleton for BlockBite token distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockbite_vesting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
ctutils = "=0.4.1"
proc-macro2 = { version = "1", features = ["span-locations"] }
toml_datetime = "=1.0.0"
