[package]
name = "blockbite-vesting"
version = "0.1.0"
description = "Week 3 Anchor skeleton for BlockBite token distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockbite_vesting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = ["token"] }
